# emergency-assistance-robot

./: LICENSE  README.md
chat_bot/: Basic Training.ipynb  chatbot.py  intents.json  intents_0.json  model.tflite  responses.json  sample.json  voicechat.py  voicechat_v1.py  voicechat_v3.py
chat_bot/chat_bot_final/: saved_model.pb
chat_bot/chat_bot_final/variables/: variables.data-00000-of-00001  variables.index
chat_bot/chat_bot_v4/: saved_model.pb
chat_bot/chat_bot_v4/variables/: variables.data-00000-of-00001  variables.index
driver_control/: driver_control.ino
final/robot/: CMakeLists.txt  package.xml  params.yaml
final/robot/launch/: robot.launch
final/robot/src/: chatbotv4.tflite  medicinetray.py  phonecall.py  robot.py  speaking.py  videostream.py  voicechat.py
final/scream_model/: CMakeLists.txt  package.xml
final/scream_model/scripts/: scream_detect.py
human_detection/: human_detection.py  human_detection_old.py  object_detection_tutorial.py
misc/: car.py  converter.py  led.py  mp3.py  videostream.py  wall_follower.py  webcam_change_exposure.txt
scream_detection/: module_1.py  scream_detectv1.py  yamnet_realtime_mic.ipynb  yamnet_visualization.ipynb
